<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="0dp"
        android:paddingBottom="25dp">

    <include layout="@layout/bottom_sheet_toggle"/>

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_question"
            android:gravity="center_horizontal"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btnYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_edit_text_bg"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/yes"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"/>

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btnNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_edit_text_bg"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/no"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"/>

</LinearLayout>