<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".view.activity.MainActivity">

    <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_edit_text_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="7dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="7dp">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/search_product"
                android:maxLines="1"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textHint"
                android:textSize="17sp"/>

        <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/magnifying"/>
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/search_note"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:textStyle="italic"/>

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/no_data"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:visibility="gone"
            android:layout_marginTop="10dp"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rvProducts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:fadeScrollbars="true"
            android:scrollbarFadeDuration="0"/>


</LinearLayout>